--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.7.0",
     "nuxt": "^3.11.2",
+    "nuxt-icons": "^3.2.1",
+    "prisma": "^5.15.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
